# service-test

install/: local_setup.sh  setup.sh
install/cpp_srvcli/lib/cpp_srvcli/: client  server
install/cpp_srvcli/share/cpp_srvcli/: package.sh
install/lidar_cpp/share/lidar_cpp/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/cpp_srvcli/: CMakeLists.txt  package.xml
src/lidar_cpp/: CMakeLists.txt
src/lidar_cpp/src/: lidar_publisher.cpp
